<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_radio"
            android:icon="@drawable/radio"
            android:title="@string/menu_radio" />
        <item
            android:id="@+id/nav_programas"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_programas" />
        <item
            android:id="@+id/nav_conocenos"
            android:icon="@drawable/abc_vector_test"
            android:title="@string/menu_conocenos"/>
        <item
            android:id="@+id/nav_ayudanos"
            android:icon="@drawable/abc_vector_test"
            android:title="@string/menu_ayudanos"/>
    </group>
</menu>