<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.srcarrillo.ministerio.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_biblia"
        android:name="com.srcarrillo.ministerio.ui.biblia.BibliaFragment"
        android:label="@string/menu_biblia"
        tools:layout="@layout/biblia_fragment"/>

    <fragment
        android:id="@+id/nav_radio"
        android:name="com.srcarrillo.ministerio.ui.radio.RadioFragment"
        android:label="@string/menu_radio"
        tools:layout="@layout/radio_fragment" />

    <fragment
        android:id="@+id/nav_programas"
        android:name="com.srcarrillo.ministerio.ui.programas.ProgramasFragment"
        android:label="@string/menu_programas"
        tools:layout="@layout/programas_fragment" />
    <fragment
        android:id="@+id/nav_conocenos"
        android:name="com.srcarrillo.ministerio.ui.conocenos.ConocenosFragment"
        android:label="@string/menu_conocenos"
        tools:layout="@layout/conocenos_fragment"/>
    <fragment
        android:id="@+id/nav_ayudanos"
        android:name="com.srcarrillo.ministerio.ui.ayudanos.AyudanosFragment"
        android:label="@string/menu_ayudanos"
        tools:layout="@layout/ayudanos_fragment"/>

</navigation>